<resources>
    <string name="app_name">Food Planner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name">Please Enter Your Name</string>
    <string name="password">Enter Password</string>
    <string name="email_filed">Enter Your Email</string>
    <string name="con_password">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="skip">Skip</string>
    <string name="don_t_have_an_account">Don\'t Have an Account ?</string>
    <string name="already_have_account">Already Have an account ?</string>
    <string name="name_filed">Enter your Name</string>
    <string name="check_your_password">check your password</string>
    <string name="at_least_8_char">at least 8 char</string>
    <string name="one_uppercase_required">one uppercase required</string>
    <string name="one_special_symbol_required">one special symbol required</string>
    <string name="one_number_required">one number required</string>
    <string name="please_enter_valid_email">please enter valid email</string>
    <string name="register_successfully">Register Successfully</string>
    <string name="please_enter_valid_data">please enter valid data</string>
    <string name="you_might_like">"You Might Like "</string>
    <string name="meal_of_the_day">Meal of The Day</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="favorite">Favorite</string>
    <string name="week_plan">Week Plan</string>
    <string name="video">Video</string>
    <string name="procedures">Procdures</string>
    <string name="main_ingredients">Ingredients</string>
    <string name="added_successfully_to_your_plan">Meal Added Successfully to Your Plan</string>
    <string name="take_a_look_to_learn">Take a look to learn</string>
    <string name="favorite_meals">Favorite Meals</string>
    <string name="meal_details">Meal Details</string>
    <string name="added_to_favorites">Meal added to your Favorites</string>
    <string name="Delete_Meal">Delete Meal</string>
    <string name="Are_you_sure_you_want_to_delete_this_meal">Are You sure you want to delete this Meal</string>
    <string name="add_meal">Add Meal</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="egypt">egypt</string>
    <string name="meal">Meal</string>
    <string name="meals">Meals</string>
    <string name="categories">Categories</string>
    <string name="cuisine">Countries</string>
    <string name="ingredient">Ingredient</string>
    <string name="search_by_meal">Search by Meal</string>
    <string name="search_by_categories">Search by Categories</string>
    <string name="search_by_cuisine">Search by Country</string>
    <string name="search_by_ingredient">Search by Ingredient</string>
    <string name="meals_from">Meals from</string>
    <string name="select_search">Please select type to Search</string>

    <!--   for  face  auth-->

    <string name="facebook_app_id">1234</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>
    <string name="no_meals_searched">"No Meals Found Please Search"</string>
    <string name="no_favorite_meals_found">No Favorite Meal Found</string>
    <string name="no_meal_for_today">No Meal For Today</string>
    <string name="profile">Profile</string>
    <string name="back">Back</string>
    <string name="head_boarding_one">Discover New Meals</string>
    <string name="head_boarding_two">Personalize Your Diet</string>
    <string name="head_boarding_three">Stay Organized and Inspired</string>
    <string name="body_boarding_one">Browse through a wide range of mouthwatering meals from various cuisines. Each meal comes with detailed descriptions and even video tutorials, so you can easily recreate them in your own kitchen</string>
    <string name="body_boarding_two">Tailor your meal plans to fit your dietary preferences and goals. Add your favorite recipes to your plan and set specific days to enjoy them. Stay on track with a customized food schedule that suits your lifestyle</string>
    <string name="body_boarding_three">Easily manage your favorite recipes and meal plans in one place. Save your go-to meals as favorites for quick access. Our intuitive interface keeps you motivated and inspired on your culinary journey</string>
    <string name="add_to_app_calender">Add to Phone Calendar</string>
    <string name="deleted_from_fav">Meal Deleted From Favorite Successfully</string>
    <string name="err_del_fav">Can\'t Delete Meal from Favorite</string>
    <string name="default_web_client_id">637769902026-kn138mt6f8c080b95qr7k0gc214jsgu4.apps.googleusercontent.com</string>
    <string name="search_by_any">you can search of a Meal in</string>
    <string name="logout">Logout</string>


</resources>